localization/v2.4.x/site/ar/tutorials/tutorials-overview.md
---
id: tutorials-overview.md
summary: توفر لك هذه الصفحة قائمة بالدروس التعليمية للتفاعل مع ميلفوس.
title: نظرة عامة على البرامج التعليمية
---
<h1 id="Tutorials-Overview" class="common-anchor-header">نظرة عامة على البرامج التعليمية<button data-href="#Tutorials-Overview" class="anchor-icon" translate="no">
      <svg translate="no"
        aria-hidden="true"
        focusable="false"
        height="20"
        version="1.1"
        viewBox="0 0 16 16"
        width="16"
      >
        <path
          fill="#0092E4"
          fill-rule="evenodd"
          d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"
        ></path>
      </svg>
    </button></h1><p>توفر لك هذه الصفحة قائمة بالدروس التعليمية للتفاعل مع ميلفوس.</p>
<table>
<thead>
<tr><th>البرامج التعليمية</th><th>حالة الاستخدام</th><th>ميزات ميلفوس ذات الصلة</th></tr>
</thead>
<tbody>
<tr><td><a href="/docs/ar/v2.4.x/build-rag-with-milvus.md">بناء RAG مع ميلفوس</a></td><td>RAG</td><td>بحث المتجهات</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/how_to_enhance_your_rag.md">RAG متقدم</a></td><td>RAG</td><td>بحث متجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/full_text_search_with_milvus.md">البحث عن النص الكامل مع ميلفوس</a></td><td>البدء السريع</td><td>البحث بالنص الكامل</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/hybrid_search_with_milvus.md">البحث الهجين مع ميلفوس</a></td><td>البحث الهجين</td><td>بحث هجين, بحث هجين, متجهات متعددة, تضمين كثيف, تضمين متناثر</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/image_similarity_search.md">البحث عن الصور باستخدام ميلفوس</a></td><td>البحث الدلالي</td><td>البحث المتجه، المجال الديناميكي</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/multimodal_rag_with_milvus.md">البحث متعدد الوسائط RAG مع ميلفوس</a></td><td>RAG</td><td>بحث متجه، مجال ديناميكي</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/multimodal_rag_with_milvus.md">بحث متعدد الوسائط باستخدام متجهات متعددة</a></td><td>البحث الدلالي</td><td>بحث متعدد المتجهات، بحث هجين</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/graph_rag_with_milvus.md">الرسم البياني RAG مع ميلفوس</a></td><td>RAG</td><td>بحث الرسم البياني</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/contextual_retrieval_with_milvus.md">الاسترجاع السياقي مع ميلفوس</a></td><td>البدء السريع</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/hdbscan_clustering_with_milvus.md">تجميع HDBSCAN مع ميلفوس</a></td><td>البدء السريع</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/use_ColPali_with_milvus.md">استخدام كولبالي للاسترجاع متعدد الوسائط مع ميلفوس</a></td><td>البدء السريع</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/vector_visualization.md">تصور المتجهات</a></td><td>البدء السريع</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/movie_recommendation_with_milvus.md">توصية الفيلم مع ميلفوس</a></td><td>نظام التوصية</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/funnel_search_with_matryoshka.md">البحث القمعي باستخدام تضمينات ماتريوشكا</a></td><td>البدء السريع</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/question_answering_system.md">نظام الإجابة على الأسئلة</a></td><td>الإجابة عن الأسئلة</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/recommendation_system.md">نظام التوصية</a></td><td>نظام التوصية</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/video_similarity_search.md">بحث تشابه الفيديو</a></td><td>البحث الدلالي</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/audio_similarity_search.md">بحث تشابه الصوت</a></td><td>البحث الدلالي</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/dna_sequence_classification.md">تصنيف الحمض النووي</a></td><td>التصنيف</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/text_search_engine.md">محرك البحث النصي</a></td><td>البحث الدلالي</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/text_image_search.md">البحث في الصور حسب النص</a></td><td>البحث الدلالي</td><td>البحث المتجه</td></tr>
<tr><td><a href="/docs/ar/v2.4.x/image_deduplication_system.md">إلغاء تكرار الصور</a></td><td>إلغاء التكرار</td><td>البحث المتجه</td></tr>
</tbody>
</table>
